change heart tansition

--- a/index.html
+++ b/index.html
@@ -91,20 +91,24 @@
 
                 <article class="card">
                     <a href="restaurants/palette.html">
-
                         <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="Photo du restaurant la palette du goût">
+                             alt="Photo du restaurant la palette du goût">
                         <h3 class="card-txt">
-                            La palette du goût<br class="flop">
+                            La palette du goût<br>
                             <span class="card-txt__subtitle">Ménilmontant</span>
                         </h3>
+                        <input type="checkbox" id="heart1" class="heart-checkbox">
+                        <label for="heart1" class="heart-label">
+                        <i class="fa-regular fa-heart fa-xl"></i>
+                        <i class="fa-solid fa-heart full-heart fa-xl"></i></label>
+   
+                 
                         <div class="news">
                             <div class="nouveau">Nouveau</div>
                         </div>
                     </a>
-                    <input type="checkbox" id="heart1" class="heart-checkbox">
-                    <label for="heart1" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
+                
 
                 <article class="card">
                     <a href="restaurants/la-note.html">
