change heart structure

--- a/index.html
+++ b/index.html
@@ -97,18 +97,19 @@
                             La palette du goût<br>
                             <span class="card-txt__subtitle">Ménilmontant</span>
                         </h3>
-                        <input type="checkbox" id="heart1" class="heart-checkbox">
-                        <label for="heart1" class="heart-label">
-                        <i class="fa-regular fa-heart fa-xl"></i>
-                        <i class="fa-solid fa-heart full-heart fa-xl"></i></label>
-   
-                 
+                        <span class="heart">
+                            <input type="checkbox" id="heart-checkbox" class="heart-checkbox" />
+                            <label for="heart-checkbox" class="heart-label">
+                              <i class="fa-regular fa-heart heart-icon"></i>
+                              <i class="fa-solid fa-heart heart-icon solid-heart"></i>
+                            </label>
+                        </span>
                         <div class="news">
                             <div class="nouveau">Nouveau</div>
                         </div>
                     </a>
                 </article>
-                
+
 
                 <article class="card">
                     <a href="restaurants/la-note.html">
@@ -118,12 +119,17 @@
                             La note enchantée<br class="flop">
                             <span class="card-txt__subtitle">Charonne</span>
                         </h3>
+                        <span class="heart">
+                            <input type="checkbox" id="heart-checkbox2" class="heart-checkbox" />
+                            <label for="heart-checkbox2" class="heart-label">
+                              <i class="fa-regular fa-heart heart-icon"></i>
+                              <i class="fa-solid fa-heart heart-icon solid-heart"></i>
+                            </label>
+                        </span>
                         <div class="news">
                             <div class="nouveau">Nouveau</div>
                         </div>
                     </a>
-                    <input type="checkbox" id="heart2" class="heart-checkbox">
-                    <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
                     <a href="restaurants/francaise.html">
@@ -133,9 +139,14 @@
                             A la francaise<br>
                             <span class="card-txt__subtitle">Cité Rouge</span>
                         </h3>
+                        <span class="heart">
+                            <input type="checkbox" id="heart-checkbox3" class="heart-checkbox" />
+                            <label for="heart-checkbox3" class="heart-label">
+                              <i class="fa-regular fa-heart heart-icon"></i>
+                              <i class="fa-solid fa-heart heart-icon solid-heart"></i>
+                            </label>
+                        </span>
                     </a>
-                    <input type="checkbox" id="heart3" class="heart-checkbox">
-                    <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
                     <a href="restaurants/delice.html">
@@ -146,9 +157,14 @@
                             Le délice des sens<br class="flop">
                             <span class="card-txt__subtitle">Folie-Méricourt</span>
                         </h3>
+                        <span class="heart">
+                            <input type="checkbox" id="heart-checkbox4" class="heart-checkbox" />
+                            <label for="heart-checkbox4" class="heart-label">
+                              <i class="fa-regular fa-heart heart-icon"></i>
+                              <i class="fa-solid fa-heart heart-icon solid-heart"></i>
+                            </label>
+                        </span>
                     </a>
-                    <input type="checkbox" id="heart4" class="heart-checkbox">
-                    <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
             </div>
         </section>
