--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -35,8 +35,13 @@
             <div class="menu-title">
                 <div class="menu-title__text">
                     <h1>La note enchantée</h1>
-                    <input type="checkbox" id="heart" class="heart-checkbox">
-                    <label for="heart" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                    <span class="heart">
+                        <input type="checkbox" id="heart-checkbox4" class="heart-checkbox" />
+                        <label for="heart-checkbox4" class="heart-label">
+                          <i class="fa-regular fa-heart heart-icon"></i>
+                          <i class="fa-solid fa-heart heart-icon solid-heart"></i>
+                        </label>
+                    </span>
                 </div>
             </div>
 
